[package]
name = "common_regex_rs"
version = "0.1.0"
edition = "2023"
authors = ["fadedreams7 <fadedreams7@gmail.com>"]
keywords = ["regex"]
categories = ["rust-patterns", "no-std", "text-processing"]
description = "Set of common regex for Rust."
license-file = "LICENSE"
documentation = "https://github.com/fadedreams/common_regex_rs"
homepage = "https://github.com/fadedreams/common_regex_rs"
repository = "https://github.com/fadedreams/common_regex_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
